--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-scikit-learn==1.1.3
-flask==1.1.2
-jinja2==2.11.3
-markupsafe==2.0.1
-itsdangerous==2.0.1
-werkzeug==2.2.2
+scikit-learn
+flask
+jinja2
+markupsafe
+itsdangerous
+werkzeug
